--- a/client/src/assets/icomoon/style.css
+++ b/client/src/assets/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?g13h9s');
-  src:  url('fonts/icomoon.eot?g13h9s#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?g13h9s') format('truetype'),
-    url('fonts/icomoon.woff?g13h9s') format('woff'),
-    url('fonts/icomoon.svg?g13h9s#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?wurgn9');
+  src:  url('fonts/icomoon.eot?wurgn9#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?wurgn9') format('truetype'),
+    url('fonts/icomoon.woff?wurgn9') format('woff'),
+    url('fonts/icomoon.svg?wurgn9#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -30,4 +30,22 @@
 }
 .icon-keyboard_arrow_left:before {
   content: "\e903";
+}
+.icon-medal:before {
+  content: "\e900";
+}
+.icon-medal1:before {
+  content: "\e901";
+}
+.icon-medal2:before {
+  content: "\e904";
+}
+.icon-medal3:before {
+  content: "\e905";
+}
+.icon-medal4:before {
+  content: "\e906";
+}
+.icon-medal5:before {
+  content: "\e907";
 }
